<resources>
    <string name="app_name">William\'s Andriod Labs</string>
    <string name="hello_message">Type your password!</string>
    <string name="button_message">Login</string>
</resources>